<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".access.Register">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/sign_up_text"
                            android:textColor="@color/blue"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:paddingRight="10dp"
                            android:text="@string/sign_in_desc"
                            android:textColor="@color/blue"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/t_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blue"
                            app:layout_constraintTop_toBottomOf="@+id/desc"
                            app:startIconDrawable="@drawable/ic_assignment_ind_black_24dp"
                            app:startIconTint="@color/blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/fullname"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/fullname"
                                android:inputType="text"
                                android:textSize="15sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/t_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blue"
                            app:layout_constraintTop_toBottomOf="@+id/t_fullname"
                            app:startIconDrawable="@drawable/ic_face_black_24dp"
                            app:startIconTint="@color/blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/uname"
                                android:inputType="text"
                                android:textSize="15sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/t_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blue"
                            app:layout_constraintTop_toBottomOf="@+id/t_username"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/blue"
                            app:startIconDrawable="@drawable/ic_fingerprint_black_24dp"
                            app:startIconTint="@color/blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/pass"
                                android:inputType="textPassword"
                                android:textSize="15sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/t_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blue"
                            app:layout_constraintTop_toBottomOf="@+id/t_password"
                            app:startIconDrawable="@drawable/ic_contact_phone_black_24dp"
                            app:startIconTint="@color/blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:textSize="15sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/t_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blue"
                            app:layout_constraintTop_toBottomOf="@+id/t_phone"
                            app:startIconDrawable="@drawable/ic_person_pin_black_24dp"
                            app:startIconTint="@color/blue">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/address"
                                android:inputType="textPostalAddress"
                                android:textSize="15sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/do_regist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_yellow"
                            android:elevation="0dp"
                            android:text="@string/signup"
                            android:textColor="@color/blue"
                            android:textSize="13sp"
                            tools:targetApi="lollipop" />

                        <Button
                            android:id="@+id/do_back"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_yellow"
                            android:elevation="0dp"
                            android:text="@string/come_users"
                            android:textColor="@color/blue"
                            android:textSize="13sp"
                            tools:targetApi="lollipop" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>