<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.ProductAdd">

    <include
        layout="@layout/app_bar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Tambah data produk"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:text="Masukan data produk anda dengan benar."
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="Total produk"
                    android:textColor="#BDB8B8"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="00"
                    android:textColor="#BDB8B8"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="0dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_picture"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/button_yellow"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="2dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="2dp"
                        android:text="Ambil photo"
                        android:textColor="@color/blue"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/photo_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:id="@+id/photo_item"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/background_header"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#55000000"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Produk"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/t_nama_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue"
                    app:layout_constraintTop_toBottomOf="@+id/desc"
                    app:startIconDrawable="@drawable/ic_local_mall_black_24dp"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nama_barang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/nama_barang"
                        android:inputType="text"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/t_harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue"
                    app:layout_constraintTop_toBottomOf="@+id/t_nama_barang"
                    app:startIconDrawable="@drawable/ic_local_atm_black_24dp"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/harga"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/harga"
                        android:inputType="number"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/t_stok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue"
                    app:layout_constraintTop_toBottomOf="@+id/t_harga"
                    app:startIconDrawable="@drawable/ic_local_offer_black_24dp"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/stok"
                        android:inputType="number"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/t_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue"
                    app:layout_constraintTop_toBottomOf="@+id/t_stok"
                    app:startIconDrawable="@drawable/ic_live_help_black_24dp"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/deskripsi"
                        android:inputType="textPersonName"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/do_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_yellow"
                    android:elevation="0dp"
                    android:text="@string/submit"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>